let's move to c++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.13)
 include($ENV{PICO_SDK_PATH}/pico_sdk_init.cmake)
 project(i2s_mic)
 pico_sdk_init()
-add_executable(i2s_mic i2s_mic.c)
+add_executable(i2s_mic i2s_mic.cc)
 pico_generate_pio_header(i2s_mic ${CMAKE_CURRENT_LIST_DIR}/i2s_mic.pio)
 target_link_libraries(i2s_mic pico_stdlib hardware_pio)
 pico_enable_stdio_usb(i2s_mic 1)
